# shillelagh-gristapi

./: .env.example  .gitignore  .pre-commit.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  pypi.yml
docs/: api-mapping.md  configuration.md  getting-started.md  limitations.md  superset.md  type-mapping.md  uri-reference.md
src/shillelagh_gristapi/: README.md  __init__.py  adapter.py  cache.py  grist.py  http.py  schema.py
tests/: conftest.py  test_adapter.py  test_cache.py  test_grist.py  test_http.py  test_integration.py  test_records.py  test_schema.py
