[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shillelagh-gristapi"
version = "0.1.6"
description = "Shillelagh adapter to query Grist documents and tables via SQL."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Quentin Leroy" }]
requires-python = ">=3.9"
dependencies = ["shillelagh>=1.4.0", "requests>=2.32.0,<3"]

keywords = ["shillelagh", "grist", "sql", "adapter", "superset"]

[project.urls]
Homepage = "https://github.com/qleroy/shillelagh-gristapi"
Issues = "https://github.com/qleroy/shillelagh-gristapi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-requests",
    "build",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."shillelagh.adapter"]
gristapi = "shillelagh_gristapi.adapter:GristAPIAdapter"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]
fix = true

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-q --cov=shillelagh-gristapi --cov-report=term-missing"
testpaths = ["tests"]
